# vscode-theme-editor

./: README.md  pyproject.toml
src/vscode_theme_editor/: main.py
