[project]
name = "vscode-theme-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["rich>=14.1.0", "typer>=0.17.4"]

[project.scripts]
theme-editor = "vscode_theme_editor.main:app"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.13.0"]
